# project_django

./: .env.template  README.md  categories.json  products.json  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  blog_feed.html  post_confirm_delete.html  post_detail.html  post_form.html
catalog/: admin.py  forms.py  models.py  urls.py  views.py
catalog/management/commands/: add_test_products.py
catalog/migrations/: 0001_initial.py
catalog/templates/catalog/: base.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html
catalog/templates/catalog/includes/: menu.html
config/: settings.py  urls.py
templates/: base.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html
